Update openapi with openapi generator script to 2.0.0
