# openapi/api_gameserver.go
@@ -3,7 +3,7 @@
  *
  * This is the REST API used as an communication layer between backend and frontend.
  *
- * API version: 1.0.0
+ * API version: 2.0.0
  * Contact: gamebase@gahr.dev
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
@@ -12,19 +12,7 @@ package openapi
 
 import (
 	"github.com/gin-gonic/gin"
-	appsv1 "k8s.io/api/apps/v1"
 )
-
-var api = NewAPI()
-var authenticator = newHttpRequestAuthenticator()
-
-func AsGameServerStatus(deployment *appsv1.Deployment) *GameServerStatus {
-	return &GameServerStatus{
-		Id:    deployment.Name,
-		Image: deployment.Spec.Template.Spec.Containers[0].Image,
-		State: deployment.Status.Replicas,
-	}
-}
 
 // ConfigureContainer - Configure a game server based on POST body
 func ConfigureContainer(c *gin.Context) {
@@ -46,9 +34,9 @@ func GetStatus(c *gin.Context) {
 	authenticator.GetStatus(c)
 }
 
-// ListImages - Get a list of all available game server images
-func ListImages(c *gin.Context) {
-	authenticator.ListImages(c)
+// ListTemplates - Get a list of all available game server templates
+func ListTemplates(c *gin.Context) {
+	authenticator.ListTemplates(c)
 }
 
 // RestartContainer - Restart a game server/container
