# openapi/model_game_container_configuration_resources.go
@@ -1,0 +1,30 @@
+/*
+ * GameBase Communication API
+ *
+ * This is the REST API used as an communication layer between backend and frontend.
+ *
+ * API version: 2.0.0
+ * Contact: gamebase@gahr.dev
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type GameContainerConfigurationResources struct {
+
+	// Template path of backend directory that is going to be used for game container creation
+	TemplatePath string `json:"templatePath,omitempty"`
+
+	Ports GameContainerConfigurationResourcesPorts `json:"ports,omitempty"`
+
+	// Memory to be allocated
+	Memory int32 `json:"memory,omitempty"`
+
+	// Command with arguments that will be run upon container creation/start
+	StartupArgs string `json:"startupArgs,omitempty"`
+
+	RestartBehavior RestartBehavior `json:"restartBehavior,omitempty"`
+
+	// Environment variables that configure the game server
+	EnvironmentVars map[string]string `json:"environmentVars,omitempty"`
+}
