# openapi/model_game_server_configuration_template.go
@@ -1,38 +1,0 @@
-/*
- * GameBase Communication API
- *
- * This is the REST API used as an communication layer between backend and frontend.
- *
- * API version: 1.0.0
- * Contact: gamebase@gahr.dev
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type GameServerConfigurationTemplate struct {
-
-	// ID of container
-	Id string `json:"id"`
-
-	// Identifier of game
-	GameTag string `json:"gameTag"`
-
-	// Image used in Docker
-	Image string `json:"image"`
-
-	State []string `json:"state"`
-
-	// Ports used by game server
-	Ports []int32 `json:"ports"`
-
-	// Max. players allowed
-	Slots int32 `json:"slots,omitempty"`
-
-	// Current players on server
-	PlayerCount int32 `json:"playerCount,omitempty"`
-
-	Map string `json:"map,omitempty"`
-
-	MapRotation []string `json:"mapRotation,omitempty"`
-}
