# openapi/routers.go
@@ -3,7 +3,7 @@
  *
  * This is the REST API used as an communication layer between backend and frontend.
  *
- * API version: 1.0.0
+ * API version: 2.0.0
  * Contact: gamebase@gahr.dev
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
@@ -61,63 +61,73 @@ var routes = Routes{
 	{
 		"Index",
 		http.MethodGet,
-		"/",
+		"/GameBase9/gamebase_communication_api/2.0.0/",
 		Index,
+	},
+
+	{
+		"AuthLoginPost",
+		http.MethodPost,
+		"/GameBase9/gamebase_communication_api/2.0.0/auth/login",
+		AuthLoginPost,
 	},
 
 	{
 		"ConfigureContainer",
 		http.MethodPost,
-		"/api/configure",
+		"/GameBase9/gamebase_communication_api/2.0.0/gs/configure/:id",
 		ConfigureContainer,
 	},
 
 	{
 		"DeleteContainer",
 		http.MethodDelete,
-		"/api/destroy/:id",
+		"/GameBase9/gamebase_communication_api/2.0.0/gs/destroy/:id",
 		DeleteContainer,
 	},
 
 	{
 		"DeployContainer",
 		http.MethodPost,
-		"/api/deploy",
+		"/GameBase9/gamebase_communication_api/2.0.0/gs/deploy",
 		DeployContainer,
 	},
 
 	{
 		"GetStatus",
 		http.MethodGet,
-		"/api",
+		"/GameBase9/gamebase_communication_api/2.0.0/gs/status",
 		GetStatus,
 	},
 
 	{
-		"ListImages",
+		"ListTemplates",
 		http.MethodGet,
-		"/api/listimages",
-		ListImages,
+		"/GameBase9/gamebase_communication_api/2.0.0/gs/templates",
+		ListTemplates,
 	},
 
 	{
 		"RestartContainer",
 		http.MethodGet,
-		"/api/restart/:id",
+		"/GameBase9/gamebase_communication_api/2.0.0/gs/restart/:id",
 		RestartContainer,
 	},
 
 	{
 		"StartContainer",
 		http.MethodGet,
-		"/api/start/:id",
+		"/GameBase9/gamebase_communication_api/2.0.0/gs/start/:id",
 		StartContainer,
 	},
 
 	{
 		"StopContainer",
 		http.MethodGet,
-		"/api/stop/:id",
+		"/GameBase9/gamebase_communication_api/2.0.0/gs/stop/:id",
 		StopContainer,
 	},
 }
+
+var api = NewAPI()
+var authenticator = newHttpRequestAuthenticator()
